--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <script src="https://kit.fontawesome.com/027d8fef7d.js" crossorigin="anonymous"></script>
-    <title>Pomodoro Clock</title>
-    <h1>Pomodoro Clock</h1>
-  </head>
-  <body class="noTransition">
-    <section id="clock-interface">
-      <span id="clockDisplay">25:00</span>
-      <div class="roundIndicatorDiv">
-        <div class="roundIndicator"></div>
-        <div class="roundIndicator"></div>
-        <div class="roundIndicator"></div>
-        <div class="roundIndicator"></div>
+
+<head>
+  <meta charset="utf-8">
+  <script src="https://kit.fontawesome.com/027d8fef7d.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.svg" />
+  <title>Pomodoro Clock</title>
+  <h1>Pomodoro Clock</h1>
+</head>
+
+<body class="noTransition">
+  <section id="clock-interface">
+    <span id="clockDisplay">25:00</span>
+    <div class="roundIndicatorDiv">
+      <div class="roundIndicator"></div>
+      <div class="roundIndicator"></div>
+      <div class="roundIndicator"></div>
+      <div class="roundIndicator"></div>
+    </div>
+    <span class='interfaceButton' id='settingsButtonContainer'><i id="settingsButton" class="fas fa-wrench"></i></span>
+    <span class="interfaceButton" id="playButton"><i class="fas fa-play-circle"></i></span>
+    <span class="interfaceButton" id="pauseButton"><i class="fas fa-pause-circle"></i></span>
+    <span class="interfaceButton" id="restartButton"><i class="fas fa-redo"></i></span>
+  </section>
+  <section class="settingsDiv">
+    <section id="sessionSettings">
+      <p>Session:</p>
+      <div class="settingsSelectors">
+        <button class="increment arrowButton" value=1><i class="fas fa-chevron-up"></i></button>
+        <span id="sessionTimeSelector">25</span>
+        <button class="decrement arrowButton" value=-1><i class="fas fa-chevron-down"></i></button>
       </div>
-      <span class='interfaceButton' id='settingsButtonContainer'><i id="settingsButton" class="fas fa-wrench"></i></span>
-      <span class="interfaceButton" id="playButton"><i class="fas fa-play-circle"></i></span>
-      <span class="interfaceButton" id="pauseButton"><i class="fas fa-pause-circle"></i></span>
-      <span class="interfaceButton" id="restartButton"><i class="fas fa-redo"></i></span>
     </section>
-    <section class="settingsDiv">
-      <section id="sessionSettings">
-        <p>Session:</p>
-        <div class="settingsSelectors">
-          <button class="increment arrowButton" value=1><i class="fas fa-chevron-up"></i></button>
-          <span id="sessionTimeSelector">25</span>
-          <button class="decrement arrowButton" value=-1><i class="fas fa-chevron-down"></i></button>
-        </div>
-      </section>
-      <section id="breakSettings">
-        <p>Break:</p>
-        <div class="settingsSelectors">
-          <button class="increment arrowButton" value=1><i class="fas fa-chevron-up"></i></button>
-          <span id="breakTimeSelector">5</span>
-          <button class="decrement arrowButton" value=-1><i class="fas fa-chevron-down"></i></button>
-        </div>
-      </section>
+    <section id="breakSettings">
+      <p>Break:</p>
+      <div class="settingsSelectors">
+        <button class="increment arrowButton" value=1><i class="fas fa-chevron-up"></i></button>
+        <span id="breakTimeSelector">5</span>
+        <button class="decrement arrowButton" value=-1><i class="fas fa-chevron-down"></i></button>
+      </div>
     </section>
+  </section>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
+
 </html>
