--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,
+    initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <script src="https://kit.fontawesome.com/027d8fef7d.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.svg" />
