No double tap zoom

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Pomodoro Clock</h1>
 </head>
 
-<body class="noTransition">
+<body class="noTransition disable-dbl-tap-zoom">
   <section id="clock-interface">
     <span id="clockDisplay">25:00</span>
     <div class="roundIndicatorDiv">
